testdata/baselines/reference/submodule/conformance/jsDeclarationsExportAssignedClassInstance2.errors.txt
index.js(6,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== index.js (1 errors) ====
    class Foo {
        static stat = 10;
        member = 10;
    }
    
    module.exports = new Foo();
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.